chore: rename core package (was loltrack) and backend package to server; update imports and scripts
- Move python core from loltrack/ -> core/ and repoint CLI entry to core.__main__
- Update backend package from backend/backend -> server and wheel package name
- Update all imports from loltrack.* -> core.* in server
- Update start/stop scripts to uvicorn server.app:app
- Keep project name and CLI command 'loltrack' intact for continuity

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,13 +22,12 @@ dependencies = [
 ]
 
 [project.scripts]
-loltrack = "loltrack.__main__:app"
+loltrack = "core.__main__:app"
 
 [tool.hatch.build.targets.wheel]
-packages = ["loltrack"]
+packages = ["core"]
 
 [tool.ruff]
 line-length = 100
 select = ["E", "F", "I"]
 ignore = []
-
