chore: remove legacy CLI; keep web dashboard only
- Drop CLI entrypoint and CLI-only deps from root pyproject
- Delete core/__main__.py and CLI dashboards module
- Update README to reflect web-only flow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,16 +13,13 @@ authors = [
   { name = "LoL-CLI", email = "noreply@example.com" }
 ]
 dependencies = [
-  "typer[all]>=0.12",
-  "rich>=13.7",
   "requests>=2.31",
   "PyYAML>=6.0",
   "python-dateutil>=2.9",
   "keyring>=24.3",
 ]
 
-[project.scripts]
-loltrack = "core.__main__:app"
+# No CLI entrypoint — web dashboard only
 
 [tool.hatch.build.targets.wheel]
 packages = ["core"]
